--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -4,8 +4,8 @@ extends base
 block content
     if errorMessage 
         span=errorMessage
-    form(method="POST")
-        input(placeholder="Name", name="name", type="text", required)
+    form(method="POST", enctype= "multipart/form-data")
+        input(placeholder="Name", name="name", type="text")
         input(placeholder="Email", name="email", type="email", required)
         input(placeholder="Username", name="username",  type="text", required)
         input(placeholder="Password", name="password", type="password", required)
