--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -4,6 +4,8 @@ block content
     if errorMessage 
         span=errorMessage
     form(method="POST")
+        label(for="video") Video File 
+        input(type="file", accept="video/*", required, id="video", name="video")
         input(placeholder="Title", required, type="text", name="title", maxlength=80)
         input(placeholder="Description", required, type="text", name="description", minlength=20)
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
