--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,7 +3,7 @@ extends base.pug
 block content 
     if errorMessage 
         span=errorMessage
-    form(method="POST")
+    form(method="POST", enctype="multipart/form-data")
         label(for="video") Video File 
         input(type="file", accept="video/*", required, id="video", name="video")
         input(placeholder="Title", required, type="text", name="title", maxlength=80)
